--- a/src/app/pages/series/serie-detalle/serie-detalle.component.html
+++ b/src/app/pages/series/serie-detalle/serie-detalle.component.html
@@ -35,22 +35,24 @@
 <article class="u-content">
   <section class="accordion" id="accordionExample">
       <div class="card">
-        <ng-container *ngFor="let ip of [1,2,3,4,5]; let pos = index;">
+        <ng-container *ngFor="let ss of seasons; let pos = index;">
           <article class="card-header pb-3 sh-accordion-father u-cursor-pointer" 
             data-toggle="collapse" [attr.data-target]="'#collapse' + pos" 
             aria-expanded="true" [attr.aria-controls]="'collapse' + pos">
             <p class="mb-0 font-weight-bold">
               <i class="fas fa-map-marker mr-3"></i>
-              Temporada 0{{ pos }}
+              Temporada 0{{ pos + 1 }}
             </p>
           </article>
         
           <article id="collapse{{ pos }}" class="collapse" [class.show]="pos === 0" 
             data-parent="#accordionExample">
             <div class="card-body bg-dark p-0">
-              <p class="u-cursor-pointer text-white sh-accordion-item p-3 mb-0" *ngFor="let i of [1,3,5,4,6,5,8,4]">
+              <p class="u-cursor-pointer text-white sh-accordion-item p-3 mb-0" 
+                *ngFor="let c of ss.capitulos; let posTwo = index"
+                [routerLink]="['/dashboard/series', serie.id , 'temporada', ss.id, 'capitulo', c.id]">
                 <i class="fas fa-video mr-3"></i>
-                Capítulo 01
+                Capítulo 0{{ posTwo + 1 }} - ({{ c.sinopsis | slice: 0 : 45 }}...)
               </p>
             </div>
           </article>
